--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ letter-spacing: 0.03em;
     .menu-btn:focus {
         color: var(--primary-bg-color);
         background-color: var(--primery-accent-color);
+        cursor: pointer;
     }
     .work-content-item .title {
             font-weight: 700;
