correct home work

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,9 @@ letter-spacing: 0.03em;
 }
 .contacts-nav .list {
     color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
 }
 
